--- a/Task 1 - CSS/index.html
+++ b/Task 1 - CSS/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPO Round 2</title>
+    <title>SPO Round 2 | CSS Task</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id ="outside-grid">
         <div class="wrapper first">
-            <div class="int1"> Hello World</div>
+            <div class="int1"> Dashed Border is the border of the wrapper element. Just made to show that it is there.</div>
             <div class="int2">
-                <div>Hello World</div>
-                <div>hello world</div>
+                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, cumque!</div>
+                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, cumque!</div>
             </div>
         </div>
         <div class="wrapper second">
-            <div>Lorem Ipsum</div>
-            <div>Dolor sit amet</div>
-            <div>hello World</div>
             <div>SPO Round 2</div>
-            <div>CSS Task using CSS Grids</div>
+            <div>CSS Task 1</div>
+            <div>Use inspect element</div>
+            <div>Made using CSS grids</div>
+            <div>Don't mind the colors</div>
         </div>
         <div class="wrapper third">
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, a! Architecto optio tenetur, neque tempora eius unde enim soluta excepturi eum iste corrupti! Impedit eaque fuga corporis eum pariatur ab.</div>
+            <div>Created by Tejas Ahuja from EE Dept.</div>
         </div>
     </div>
 </body>
