--- a/Task 2 - JS/index.html
+++ b/Task 2 - JS/index.html
@@ -12,8 +12,11 @@
     <H1>JS Task 2 | SPO</H1>
     <h3>You can open console also... similar output gets printed</h3>
     <div id="loader">Please Wait...</div>
-    <table id="data-display">
-        
-    </table>
+    <table id="data-display"></table>
+    <hr>
+    <div>
+        <p>Tejas Ahuja</p>
+        <p>Department of Electrical Engineering</p>
+    </div>
 </body>
 </html>
