Aligned text to middle and center

--- a/Task 1 - CSS/index.html
+++ b/Task 1 - CSS/index.html
@@ -10,21 +10,21 @@
 <body>
     <div id ="outside-grid">
         <div class="wrapper first">
-            <div class="int1"> Dashed Border is the border of the wrapper element. Just made to show that it is there.</div>
+            <div class="int1"> <div class="text">Dashed Border is the border of the wrapper element. Just made to show that it is there.</div class="text"></div>
             <div class="int2">
-                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, cumque!</div>
-                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, cumque!</div>
+                <div><div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, cumque!</div></div>
+                <div><div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, cumque!</div></div>
             </div>
         </div>
         <div class="wrapper second">
-            <div>SPO Round 2</div>
-            <div>CSS Task 1</div>
-            <div>Use inspect element</div>
-            <div>Made using CSS grids</div>
-            <div>Don't mind the colors</div>
+            <div><div class="text">SPO Round 2</div></div>
+            <div><div class="text">CSS Task 1</div></div>
+            <div><div class="text">Use inspect element</div></div>
+            <div><div class="text">Made using CSS grids</div></div>
+            <div><div class="text">Don't mind the colors</div></div>
         </div>
         <div class="wrapper third">
-            <div>Created by Tejas Ahuja from EE Dept.</div>
+            <div><div class="text">Created by Tejas Ahuja from EE Dept.</div></div>
         </div>
     </div>
 </body>
